--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.label {
+    font-weight: bold;
+    text-decoration: underline;
+}
 .header-color {
     background: #000046; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #1CB5E0, #000046); /* Chrome 10-25, Safari 5.1-6 */
