--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,14 @@
     background: -webkit-linear-gradient(to right, #1CB5E0, #000046); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    position: fixed;
+}
+@media (max-width: 750px){
+    .landing-grid {
+        position: relative;
+    }
 }
 
 
@@ -54,9 +57,8 @@
     }
 
 .social-links {
-    display: flex;
     justify-content: space-between;
-    width: 50%;
+    width:100%;
     margin: auto;
 }
 
@@ -72,7 +74,6 @@
 
 .contact-body {
     margin: auto;
-    position: fixed;
     justify-content: center;
     padding-top: 2em;
     width: 100%;
@@ -88,7 +89,14 @@
     color: black;
     margin-bottom: 20px;
 }
+.ninja {
+    padding-right: 150px; 
+}
 
+.icon-image {
+    max-width: 100px;
+    max-height: 70px;
+}
     .contact-grid h2 {
         font-family: 'Anton', sans-serif;
     }
@@ -106,20 +114,20 @@
 
 .contact-list {
     margin: auto;
-    position: fixed;
     justify-content: center;
     padding-top: 2em;
     width: 100%;
     height: 100%
 }
 .contact-list i {
-    font-size: 66px;
+    font-size: 1em;
     padding-right: 5rem;
 }
+
 .contact-list img {
     height: 100px;
     margin:-15px;
-    padding-right: 55px;
+    padding-right: 50px;
 }
 
 .resume-right-col{
@@ -127,5 +135,5 @@
     color: white;
 }
 a, a:visited, a:hover, a:active {
-    color: inherit;
+    color: black;
 }
